tests/unit/language/errors/assign_move_consumes_rejected.arche
// `a = b` moves b (consumes it), exactly like `a := b`. Using b afterward is a use-after-move error —
// the move discipline applies to assignment, not just binding.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "consumed" %t.out
#import { fmt }
main :: proc() {
  a : [3]int;
  b : [3]int;
  b[0] = 7;
  a    = b;
  fmt.printf("%d\n", b[0]);
}